      the final visibilities. (Bug #362)

04-Dec-2005  (Lars Duening)
  - (interpret.c) Calling an unbound lambda cleaned the control stack
      twice, causing errors (Bug #374).
  - (simul_efun.c) Only public simul-efuns can be called. This was always
      valid for sefuns outside the 256-range, but now also applies to
      normal sefuns as well (Bug #419)

02-Dec-2005  (Lars Duening)
  - (gcollect.c) Added a log output when all objects are data-cleaned, as
      it might be the cause for some observed slowdowns.
  - (closure.c, interpret.c) For completeness sake: removed the compilation
      errors happening when disabling the new inline closures (Bug #423).

27-Nov-2005  (Lars Duening)
  - (object.c) Efun present(): Modified the <n> search behaviour so that the
      numbering is applied over both inventory and environment
      together. Before, the numbering was individual in each
      space, leading to situations where low-numbered objects in the
      environment were hidden by those in the inventory (Bug #417).
  - (object.c) Efun function_exists(): The 'FEXISTS_ALL' result also contains
      information about the function's type, flags, and number of
      arguments (Bug #410).

26-Nov-2005  (Lars Duening)
  - (efuns.c) Efun sscanf(): Added test whether the constant characters after
      a %-field also match - if not, the %-field is considered unmatched
      (suggested by Largo).
  - (efuns, func_spec) Efuns md5()/sha1(): Accept the number of iterations as
       optional argument (Bug #418).

24-Nov-2005  (Lars Duening)  (3.3.712)
  - Created snapshot.
  - (md5.c) The ROTATE_LEFT macro wasn't 64-bit clean (Bug #413).
  - (interpret.c) Using foreach(), when looping over a mapping with no values,
      or with only the index being extracted, the loop actually loops over the
      mapping and not just the indices copied into an array (Bug #388).
  - (object.c) Efun set_environment(): clear the RESET_STATE flag of